<resources>
    <string name="app_name">Demo</string>
    <string name="news">新闻</string>
    <string name="notepad">记事本</string>
    <!--  notepad  -->
    <string name="menu_add">添加</string>
    <string name="menu_delete">删除</string>
    <string name="menu_settings">设置</string>
    <string name="left_menu_call">call</string>
    <string name="left_menu_friends">friends</string>
    <string name="left_menu_location">location</string>
    <string name="left_menu_mail">mail</string>
    <string name="left_menu_tasks">tasks</string>
    <string name="edit_menu">完成</string>
</resources>
