<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/left_call"
        android:icon="@drawable/ic_call"
        android:title="@string/left_menu_call" />
    <item
        android:id="@+id/left_friends"
        android:icon="@drawable/ic_friends"
        android:title="@string/left_menu_friends" />
    <item
        android:id="@+id/left_location"
        android:icon="@drawable/ic_location"
        android:title="@string/left_menu_location" />
    <item
        android:id="@+id/left_mail"
        android:icon="@drawable/ic_mail"
        android:title="@string/left_menu_mail" />
    <item
        android:id="@+id/left_tasks"
        android:icon="@drawable/ic_tasks"
        android:title="@string/left_menu_tasks" />
</menu>